Archive2/ce/b69c605e32832d/main.cpp
extern "C" void *example(int (*compar)(const void *, const void *));

extern "C++" void *example(int (*compar)(const void *, const void *));

int main() {}
